CSS_Stylesheet Template
Added a Stylesheet as a template to go off

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+  <title> TeamChill Website</title>
+<link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
-  <body>
+    <href="http://www.TeamChill.com/css/main.css">
+      <body>
 
     <!-- Website header -->
     <div class="header">
@@ -30,5 +32,5 @@
     <div class="reviews">
     </div>
 
-  </body>
-</html>
+    </body>
+      </html>
