Update index.html to include contact form

--- a/index.html
+++ b/index.html
@@ -30,5 +30,22 @@
     <div class="reviews">
     </div>
 
+    <!-- About Me Info -->
+<div class="w3-row">
+<h2 style="padding-top: 70px"> CONTACT </h2>
+<p class="p2"> If you would like to get in contact, please fill in the Google Form below</p>
+<!--Google Form-->
+ <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScOfc4UjCCOS1I3S-Mz0izxDqXD-hMnaRJhHUOirgpy0yQb5g/viewform?embedded=true" width="760" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+  <p class="p2"> Thank You!</p>
+  </div>
+  <div style="padding: 50px"> </div>
+
+<!--Link to Template-->
+  <div class="w3-grey w3-center w3-padding-24">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></div>
+</div>
+<!-- End page content -->
+</body>
+</html>
+
   </body>
 </html>
