--- a/index.html
+++ b/index.html
@@ -1,41 +1,65 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <meta charset="utf-8">
+    <title>Featured</title>
 
-    <!-- Bootsrap -->
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 
-    <meta charset="utf-8">
-  <title> TeamChill Website</title>
-<link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
-    <href="http://www.TeamChill.com/css/main.css">
-      <body>
+  <body>
 
-    <!-- Website header -->
-    <div class="header">
-      <h1>Team Chill's Website</h1>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link" href="#home">Home</a>
+        <a class="nav-item nav-link" href="#restaurant_menu">Where to eat?</a>
+        <a class="nav-item nav-link" href="#contact">Contact Us</a>
+        <a class="nav-item nav-link" href=".\about.html">About Us</a>
+      </div>
+    </nav>
+
+    <!-- Title Page -->
+    <div id="home">
+      <h1>Featured</h1>
       <h2>Bristol's best eats</h2>
     </div>
 
-    <!-- Restaurant bios -->
-    <div class="bios">
-
-      <!-- Pata Negra -->
-      <h3>Pata Negra</h3>
-      <img src="pata-negra.jpg" alt="A booth in Pata Negra">
-      <p>Pata Negra is a bustling, Spanish tapas & wine bar in the heart of Bristol’s Old City.</p>
-
-      <!--Burger Theory -->
-      <h3>Burger Theory</h3>
-      <img src="burger-theory.jpg" alt="Seating inside Burger Theory">
-      <p>Not your average burger joint. Burger Theory is the home of the creative burger people. Expect burgers inspired by world cuisine with everything from southern fried chicken to tempura soft shell crab burgers!</p>
+    <!-- Restaurant menu page-->
+    <div id="restaurant_menu">
     </div>
 
-    <!-- Restaurant reviews -->
-    <div class="reviews">
+    <!-- Restaurant 1 -->
+    <div id="restaurant1">
     </div>
-    
+
+    <!-- Restaurant 2 -->
+    <div id="restaurant2">
+    </div>
+
+    <!-- Restaurant 3 -->
+    <div id="restaurant3">
+    </div>
+
+    <!-- Restaurant 4 -->
+    <div id="restaurant4">
+    </div>
+
+    <!-- Restaurant 5 -->
+    <div id="restaurant5">
+    </div>
+
+    <!-- Restaurant 6 -->
+    <div id="restaurant6">
+    </div>
+
+    <!-- Contact Us -->
+    <div class="contact">
+    </div>
+
+
   </body>
 </html>
