Add Bootstrap Layout
Layout of main page built.

--- a/index.html
+++ b/index.html
@@ -24,40 +24,119 @@
 
     <!-- Title Page -->
     <div id="home">
-      <h1>Featured</h1>
-      <h2>Bristol's best eats</h2>
+      <h1>F<strong>eat</strong>ured</h1>
     </div>
+
+  <div id="bio">
+    <p>Bristol's best eats</p>
+  </div>
 
     <!-- Restaurant menu page-->
-    <div id="restaurant_menu">
+    <div class="container-fluid" id="restaurant_menu">
+      <div class="row">
+        <div class="col-4">
+            <img src="images/550X300 Placeholder.png" class="img-fluid">
+        </div>
+        <div class="col-4">
+            <img src="images/550X300 Placeholder.png" class="img-fluid">
+        </div>
+        <div class="col-4">
+            <img src="images/550X300 Placeholder.png" class="img-fluid">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-4">
+            <img src="images/550X300 Placeholder.png" class="img-fluid">
+        </div>
+        <div class="col-4">
+            <img src="images/550X300 Placeholder.png" class="img-fluid">
+        </div>
+        <div class="col-4">
+            <img src="images/550X300 Placeholder.png" class="img-fluid">
+        </div>
+      </div>
     </div>
 
+<div class="container-fluid" id="restaurant-details">
     <!-- Restaurant 1 -->
-    <div id="restaurant1">
+    <div class="row" id="restaurant1">
+    <div class="col-4">
+      <img src="images/550x300 Placeholder.png" class="img-fluid">
+    </div>
+      <div class="link-description col-8">
+        <h2>Name of restaurant 1</h2>
+        <p>description</p>
+        <a href="wwww.restaurant1.com">link text</a>
+      </div>
     </div>
 
     <!-- Restaurant 2 -->
-    <div id="restaurant2">
+    <div class="row" id="restaurant2">
+      <div class="link-description col-8">
+        <h2>Name of restaurant 2</h2>
+        <p>description</p>
+        <a href="wwww.restaurant2.com">link text</a>
+      </div>
+    <div class="col-4">
+      <img src="images/550x300 Placeholder.png" class="img-fluid">
+    </div>
+
     </div>
 
     <!-- Restaurant 3 -->
-    <div id="restaurant3">
+    <div class="row" id="restaurant3">
+    <div class="col-4">
+      <img src="images/550x300 Placeholder.png" class="img-fluid">
+    </div>
+      <div class="link-description col-8">
+        <h2>Name of restaurant 3</h2>
+        <p>description</p>
+        <a href="wwww.restaurant3.com">link text</a>
+      </div>
     </div>
 
     <!-- Restaurant 4 -->
-    <div id="restaurant4">
+    <div class="row" id="restaurant4">
+
+      <div class="link-description col-8">
+        <h2>Name of restaurant 4</h2>
+        <p>description</p>
+        <a href="wwww.restaurant4.com">link text</a>
+      </div>
+      <div class="col-4">
+        <img src="images/550x300 Placeholder.png" class="img-fluid">
+      </div>
     </div>
 
     <!-- Restaurant 5 -->
-    <div id="restaurant5">
+    <div class="row" id="restaurant5">
+    <div class="col-4">
+      <img src="images/550x300 Placeholder.png" class="img-fluid">
+    </div>
+      <div class="link-description col-8">
+        <h2>Name of restaurant 5</h2>
+        <p>description</p>
+        <a href="wwww.restaurant5.com">link text</a>
+      </div>
     </div>
 
     <!-- Restaurant 6 -->
-    <div id="restaurant6">
+    <div class="row" id="restaurant6">
+      <div class="link-description col-8">
+        <h2>Name of restaurant 6</h2>
+        <p>description</p>
+        <a href="wwww.restaurant6.com">link text</a>
+      </div>
+    <div class="col-4">
+      <img src="images/550x300 Placeholder.png" class="img-fluid">
     </div>
 
+    </div>
     <!-- Contact Us -->
     <div class="contact">
+      <a href="http://www.facebook.com" target="_blank"> <img src="images/facebook-logo.png" class="social-logo"></a>
+      <a href="http://www.instagram.com" target="_blank"> <img src="images/instagram-logo.jpg" class="social-logo"></a>
+      <a href="http://www.twitter.com" target="_blank"> <img src="images/twitter-logo.png" class="social-logo"></a>
     </div>
 
 
