--- a/about.html
+++ b/about.html
@@ -13,16 +13,37 @@
   <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link" href=".\index.html#home">Home</a>
-        <a class="nav-item nav-link" href=".\index.html#restaurant_menu">Where to eat?</a>
-        <a class="nav-item nav-link" href=".\index.html#contact">Contact Us</a>
-        <a class="nav-item nav-link active" href=".\about.html">About Us</a>
-      </div>
-    </nav>
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" href="index.html#home">Home</a>
+      <a class="nav-item nav-link" href=".\restaurant_menu.html">Where to eat?</a>
+      <a class="nav-item nav-link" href=".\contact Us.html">Contact Us</a>
+      <a class="nav-item nav-link" href=".\about.html">About Us</a>
+    </div>
+  </nav>
+    
 
     <h1>About Us</h1>
+
+    <!.. Added Are you a cat lover -->
+
+    <header class="masthead text-center text-white d-flex">
+   <div class="container my-auto">
+     <div class="row">
+       <div class="col-lg-10 mx-auto">
+         <h1 class="text-uppercase">
+           <strong>Are you a cat Lover?</strong>
+         </h1>
+         <hr>
+       </div>
+       <div class="col-lg-8 mx-auto">
+         <p class="text-faded mb-5">They push things off the counter, they sleep a lot, they don't love you, they're probably planning to kill you. Why do you love them so much?</p>
+         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Those little ball of fur!</a>
+       </div>
+     </div>
+   </div>
+ </header>
+
 
   </body>
 </html>
