--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
   <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link" href="#home">Home</a>
-        <a class="nav-item nav-link" href="#restaurant_menu">Where to eat?</a>
-        <a class="nav-item nav-link" href="#contact">Contact Us</a>
-        <a class="nav-item nav-link" href=".\about.html">About Us</a>
-      </div>
-    </nav>
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" href="index.html#home">Home</a>
+      <a class="nav-item nav-link" href=".\restaurant_menu.html">Where to eat?</a>
+      <a class="nav-item nav-link" href=".\contact Us.html">Contact Us</a>
+      <a class="nav-item nav-link" href=".\about.html">About Us</a>
+    </div>
+  </nav>
 
     <!-- Title Page -->
     <div id="home">
@@ -30,6 +30,7 @@
   <div id="bio">
     <p>Bristol's best eats</p>
   </div>
+
 
     <!-- Restaurant menu page-->
     <div class="container-fluid" id="restaurant_menu">
