--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" href="index.html#home">Home</a>
-      <a class="nav-item nav-link" href=".\restaurant_menu.html">Where to eat?</a>
-      <a class="nav-item nav-link" href=".\contact Us.html">Contact Us</a>
+      <a class="nav-item nav-link" href=".\index.html#home">Home</a>
+      <a class="nav-item nav-link" href=".\index.html#restaurant_menu">Where to eat?</a>
+      <a class="nav-item nav-link" href=".\index.html#contact">Contact Us</a>
       <a class="nav-item nav-link" href=".\about.html">About Us</a>
     </div>
   </nav>
