--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   </head>
   <body>
 
@@ -132,8 +132,46 @@
     </div>
 
     </div>
+
+    <div>
+      <div class="contact">
+  </div>
+  <section id="contact">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 mx-auto text-center">
+
+        <br/>
+
+        <h2 class="section-heading">Let's Get In Touch!</h2>
+        <hr class="my-4">
+        <p class="mb-5">If you have any questions!</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4 ml-auto text-center">
+        <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
+        <p>0117-456-678</p>
+      </div>
+      <div class="col-lg-4 mr-auto text-center">
+        <i class="fa fa-envelope fa-3x mb-3 sr-contact"></i>
+        <p>
+          <a href="mailto:abc@yahoo.com" target="_blank">abc@yahoo.com</a>
+        </p>
+      </div>
+      <div class="col-lg-4 mr-auto text-center">
+        <i class="fa fa-comment fa-3x mb-3 sr-contact"></i>
+        <p>
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLScOfc4UjCCOS1I3S-Mz0izxDqXD-hMnaRJhHUOirgpy0yQb5g/viewform?embedded=true%22" target="_blank">Feedback!</a>
+        </p>
+      </div>
+    </div>
+    <br>
+
+    </div>
     <!-- Contact Us -->
     <div class="contact">
+
       <a href="http://www.facebook.com" target="_blank"> <img src="images/facebook-logo.png" class="social-logo"></a>
       <a href="http://www.instagram.com" target="_blank"> <img src="images/instagram-logo.jpg" class="social-logo"></a>
       <a href="http://www.twitter.com" target="_blank"> <img src="images/twitter-logo.png" class="social-logo"></a>
