Created Title Page
Created and styled the title page - included a button that links to the next section.

--- a/index.html
+++ b/index.html
@@ -9,27 +9,33 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
   </head>
   <body>
 
     <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light">
+  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark">
     <div class="navbar-nav">
       <a class="nav-item nav-link" href=".\index.html#home">Home</a>
       <a class="nav-item nav-link" href=".\index.html#restaurant_menu">Where to eat?</a>
-      <a class="nav-item nav-link" href=".\index.html#contact">Contact Us</a>
       <a class="nav-item nav-link" href=".\about.html">About Us</a>
+      <a class="nav-item nav-link" href=".\index.html#contact">Contact Us</a>
     </div>
   </nav>
 
     <!-- Title Page -->
-    <div id="home">
-      <h1>F<strong>eat</strong>ured</h1>
-    </div>
 
-  <div id="bio">
-    <p>Bristol's best eats</p>
-  </div>
+    <!-- Background Image -->
+    <div class="bg">
+      <div class="text-center" id="home">
+        <!-- Title -->
+        <h1 class="title">Bristol Eats</h1>
+        <!-- Tagline -->
+        <h2 class="bio">Our favourite Bristol restaurants.</h2>
+        <!-- Button for next page -->
+        <a class="btn btn-outline-light btn-lg" href="#restaurant_menu" role="button">I'm hungry...</a>
+      </div>
+    </div>
 
 
     <!-- Restaurant menu page-->
