Changes to background colours and social buttons

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Featured</title>
+    <title>Bristol Eats</title>
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -68,6 +68,7 @@
     <!-- Restaurant 1 -->
     <div class="row" id="restaurant1">
     <div class="col-4">
+      <img src="images/550x300 Placeholder.png" class="img-fluid">
     </div>
       <div class="link-description col-8">
         <h2>Name of restaurant 1</h2>
@@ -149,7 +150,7 @@
 
         <br/>
 
-        <h2 class="section-heading">Let's Get In Touch!</h2>
+        <h2 class="section-heading">Get In Touch</h2>
         <hr class="my-4">
         <p class="mb-5">If you have any questions!</p>
       </div>
