--- a/index.html
+++ b/index.html
@@ -65,38 +65,49 @@
     </div>
 
 <div class="container-fluid" id="restaurant-details">
+  <!-- Experimenting with Javascript
+<script type="text/javascript">
+function changeTextAlign () {
+var name = $("restaurant");
+var number = $(name+"x");
+document.getElementbyId("restautant-details").style.textAlign;
+}if(x === "2"){
+    text = "right";
+  }
+</script>
+-->
     <!-- Restaurant 1 -->
-    <div class="row" id="restaurant1">
-    <div class="col-4">
-      <img src="images/550x300 Placeholder.png" class="img-fluid">
+    <div class='row' id="restaurant1">
+    <div class='col-5' id="restaurant-image">
+      <img src="images/las_iguanas_banner.jpg" class="img-fluid1">
     </div>
-      <div class="link-description col-8">
-        <h2>Name of restaurant 1</h2>
-        <p>description</p>
-        <a href="wwww.restaurant1.com">link text</a>
+      <div class='col-7' id="restaurant-description">
+        <h2><b>Las Iguanas</b></h2>
+        <p>Las Iguanas brings Rio vibes to the UK. Serving Latin American dishes made from scratch with passion, love and lots of Latin magic: you can expect a real party!</p>
+        <a href="https://www.iguanas.co.uk/">Celebrate the flavours of Latin America</a>
       </div>
     </div>
+
 
     <!-- Restaurant 2 -->
     <div class="row" id="restaurant2">
-      <div class="link-description col-8">
-        <h2>Name of restaurant 2</h2>
+      <div class='col-7' id="restaurant-description">
+        <h2><b>Name of restaurant 2</b></h2>
         <p>description</p>
         <a href="wwww.restaurant2.com">link text</a>
-      </div>
-    <div class="col-4">
+    </div>
+    <div class='col-5' id="restaurant-image">
       <img src="images/550x300 Placeholder.png" class="img-fluid">
     </div>
-
     </div>
 
     <!-- Restaurant 3 -->
     <div class="row" id="restaurant3">
-    <div class="col-4">
+    <div class='col-5' id="restaurant-image">
       <img src="images/550x300 Placeholder.png" class="img-fluid">
     </div>
-      <div class="link-description col-8">
-        <h2>Name of restaurant 3</h2>
+      <div class='col-7' id="restaurant-description">
+        <h2><b>Name of restaurant 3</b></h2>
         <p>description</p>
         <a href="wwww.restaurant3.com">link text</a>
       </div>
@@ -104,24 +115,23 @@
 
     <!-- Restaurant 4 -->
     <div class="row" id="restaurant4">
-
-      <div class="link-description col-8">
-        <h2>Name of restaurant 4</h2>
+      <div class='col-7' id="restaurant-description">
+        <h2><b>Name of restaurant 4</b></h2>
         <p>description</p>
         <a href="wwww.restaurant4.com">link text</a>
       </div>
-      <div class="col-4">
+      <div class='col-5' id="restaurant-image">
         <img src="images/550x300 Placeholder.png" class="img-fluid">
       </div>
     </div>
 
     <!-- Restaurant 5 -->
     <div class="row" id="restaurant5">
-    <div class="col-4">
+    <div class='col-5' id="restaurant-image">
       <img src="images/550x300 Placeholder.png" class="img-fluid">
     </div>
-      <div class="link-description col-8">
-        <h2>Name of restaurant 5</h2>
+      <div class='col-7' id="restaurant-description">
+        <h2><b>Name of restaurant 5</b></h2>
         <p>description</p>
         <a href="wwww.restaurant5.com">link text</a>
       </div>
@@ -129,16 +139,16 @@
 
     <!-- Restaurant 6 -->
     <div class="row" id="restaurant6">
-      <div class="link-description col-8">
-        <h2>Name of restaurant 6</h2>
+      <div class='col-7' id="restaurant-description">
+        <h2><b>Name of restaurant 6</b></h2>
         <p>description</p>
         <a href="wwww.restaurant6.com">link text</a>
       </div>
-    <div class="col-4">
+    <div class='col-5' id="restaurant-image">
       <img src="images/550x300 Placeholder.png" class="img-fluid">
     </div>
-
-    </div>
+  </div>
+</div>
 
     <div>
       <div class="contact">
