--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Featured</title>
+    <title>Bristol Eats</title>
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -14,18 +14,18 @@
   <body>
 
     <!-- Navigation -->
-  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link" href=".\index.html#home">Home</a>
-      <a class="nav-item nav-link" href=".\index.html#restaurant_menu">Where to eat?</a>
-      <a class="nav-item nav-link" href=".\about.html">About Us</a>
-      <a class="nav-item nav-link" href=".\index.html#contact">Contact Us</a>
-    </div>
-  </nav>
+    <nav id="navbar" class="navbar navbar-expand-lg navbar-dark">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link" href=".\index.html#home">Home</a>
+        <a class="nav-item nav-link" href=".\index.html#restaurant_menu">Where to eat?</a>
+        <a class="nav-item nav-link" href=".\about.html">About Us</a>
+        <a class="nav-item nav-link" href=".\index.html#contact">Contact Us</a>
+      </div>
+    </nav>
 
-    <!-- Title Page -->
+      <!-- Title Page -->
 
-    <!-- Background Image -->
+      <!-- Background Image -->
     <div class="bg">
       <div class="text-center" id="home">
         <!-- Title -->
@@ -38,7 +38,7 @@
     </div>
 
 
-    <!-- Restaurant menu page-->
+      <!-- Restaurant menu page-->
     <div class="container-fluid" id="restaurant_menu">
       <div class="row">
         <div class="col-4">
@@ -64,131 +64,128 @@
       </div>
     </div>
 
-<div class="container-fluid" id="restaurant-details">
-  <!-- Experimenting with Javascript
-<script type="text/javascript">
-function changeTextAlign () {
-var name = $("restaurant");
-var number = $(name+"x");
-document.getElementbyId("restautant-details").style.textAlign;
-}if(x === "2"){
-    text = "right";
-  }
-</script>
--->
-    <!-- Restaurant 1 -->
-    <div class='row' id="restaurant1">
-    <div class='col-5' id="restaurant-image">
-      <img src="images/las_iguanas_banner.jpg" class="img-fluid1">
-    </div>
-      <div class='col-7' id="restaurant-description">
-        <h2><b>Las Iguanas</b></h2>
-        <p>Las Iguanas brings Rio vibes to the UK. Serving Latin American dishes made from scratch with passion, love and lots of Latin magic: you can expect a real party!</p>
-        <a href="https://www.iguanas.co.uk/">Celebrate the flavours of Latin America</a>
+    <div class="container-fluid" id="restaurant-details">
+    <!-- Experimenting with Javascript
+    <script type="text/javascript">
+    function changeTextAlign () {
+    var name = $("restaurant");
+    var number = $(name+"x");
+    document.getElementbyId("restautant-details").style.textAlign;
+    }if(x === "2"){
+        text = "right";
+      }
+    </script>
+    -->
+      <!-- Restaurant 1 -->
+      <div class="row" id="restaurant1">
+        <div class="col-5" id="restaurant-image">
+          <img src="images/las_iguanas_banner.jpg" class="img-fluid1">
+        </div>
+        <div class="col-7" id="restaurant-description">
+          <h2><b>Las Iguanas</b></h2>
+          <p>Las Iguanas brings Rio vibes to the UK. Serving Latin American dishes made from scratch with passion, love and lots of Latin magic: you can expect a real party!</p>
+          <a href="https://www.iguanas.co.uk/">Celebrate the flavours of Latin America</a>
+        </div>
       </div>
-    </div>
 
 
-    <!-- Restaurant 2 -->
-    <div class="row" id="restaurant2">
-      <div class='col-7' id="restaurant-description">
-        <h2><b>Name of restaurant 2</b></h2>
-        <p>description</p>
-        <a href="wwww.restaurant2.com">link text</a>
-    </div>
-    <div class='col-5' id="restaurant-image">
-      <img src="images/550x300 Placeholder.png" class="img-fluid">
-    </div>
-    </div>
-
-    <!-- Restaurant 3 -->
-    <div class="row" id="restaurant3">
-    <div class='col-5' id="restaurant-image">
-      <img src="images/550x300 Placeholder.png" class="img-fluid">
-    </div>
-      <div class='col-7' id="restaurant-description">
-        <h2><b>Name of restaurant 3</b></h2>
-        <p>description</p>
-        <a href="wwww.restaurant3.com">link text</a>
+      <!-- Restaurant 2 -->
+      <div class="row" id="restaurant2">
+        <div class="col-7" id="restaurant-description">
+          <h2><b>Name of restaurant 2</b></h2>
+          <p>description</p>
+          <a href="wwww.restaurant2.com">link text</a>
+        </div>
+        <div class="col-5" id="restaurant-image">
+          <img src="images/550x300 Placeholder.png" class="img-fluid">
+        </div>
       </div>
-    </div>
 
-    <!-- Restaurant 4 -->
-    <div class="row" id="restaurant4">
-      <div class='col-7' id="restaurant-description">
-        <h2><b>Name of restaurant 4</b></h2>
-        <p>description</p>
-        <a href="wwww.restaurant4.com">link text</a>
+      <!-- Restaurant 3 -->
+      <div class="row" id="restaurant3">
+        <div class="col-5" id="restaurant-image">
+          <img src="images/550x300 Placeholder.png" class="img-fluid">
+        </div>
+        <div class="col-7" id="restaurant-description">
+          <h2><b>Name of restaurant 3</b></h2>
+          <p>description</p>
+          <a href="wwww.restaurant3.com">link text</a>
+        </div>
       </div>
-      <div class='col-5' id="restaurant-image">
+
+      <!-- Restaurant 4 -->
+      <div class="row" id="restaurant4">
+        <div class="col-7" id="restaurant-description">
+          <h2><b>Name of restaurant 4</b></h2>
+          <p>description</p>
+          <a href="wwww.restaurant4.com">link text</a>
+        </div>
+        <div class="col-5" id="restaurant-image">
+          <img src="images/550x300 Placeholder.png" class="img-fluid">
+        </div>
+      </div>
+
+      <!-- Restaurant 5 -->
+      <div class="row" id="restaurant5">
+        <div class="col-5" id="restaurant-image">
+          <img src="images/550x300 Placeholder.png" class="img-fluid">
+        </div>
+        <div class="col-7" id="restaurant-description">
+          <h2><b>Name of restaurant 5</b></h2>
+          <p>description</p>
+          <a href="wwww.restaurant5.com">link text</a>
+        </div>
+      </div>
+
+      <!-- Restaurant 6 -->
+      <div class="row" id="restaurant6">
+        <div class="col-7" id="restaurant-description">
+          <h2><b>Name of restaurant 6</b></h2>
+          <p>description</p>
+          <a href="wwww.restaurant6.com">link text</a>
+        </div>
+      <div class="col-5" id="restaurant-image">
         <img src="images/550x300 Placeholder.png" class="img-fluid">
       </div>
+
+    <!-- End of restaurant descriptions -->
     </div>
 
-    <!-- Restaurant 5 -->
-    <div class="row" id="restaurant5">
-    <div class='col-5' id="restaurant-image">
-      <img src="images/550x300 Placeholder.png" class="img-fluid">
-    </div>
-      <div class='col-7' id="restaurant-description">
-        <h2><b>Name of restaurant 5</b></h2>
-        <p>description</p>
-        <a href="wwww.restaurant5.com">link text</a>
-      </div>
-    </div>
+    <!-- Contact Page -->
+    <section id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto text-center">
+            <h2 class="section-heading">Let's Get In Touch</h2>
+            <hr class="my-4">
+            <p class="mb-5">If you have any questions!</p>
+          </div>
+        </div>
 
-    <!-- Restaurant 6 -->
-    <div class="row" id="restaurant6">
-      <div class='col-7' id="restaurant-description">
-        <h2><b>Name of restaurant 6</b></h2>
-        <p>description</p>
-        <a href="wwww.restaurant6.com">link text</a>
+        <!-- Contact Details -->
+        <div class="row">
+          <div class="col-lg-4 ml-auto text-center">
+            <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
+            <p>0117-456-678</p>
+          </div>
+          <div class="col-lg-4 mr-auto text-center">
+            <i class="fa fa-envelope fa-3x mb-3 sr-contact"></i>
+            <p>
+              <a href="mailto:abc@yahoo.com" target="_blank">abc@yahoo.com</a>
+            </p>
+          </div>
+          <div class="col-lg-4 mr-auto text-center">
+            <i class="fa fa-comment fa-3x mb-3 sr-contact"></i>
+            <p>
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLScOfc4UjCCOS1I3S-Mz0izxDqXD-hMnaRJhHUOirgpy0yQb5g/viewform?embedded=true%22" target="_blank">Feedback!</a>
+            </p>
+          </div>
+        </div>
       </div>
-    <div class='col-5' id="restaurant-image">
-      <img src="images/550x300 Placeholder.png" class="img-fluid">
-    </div>
-  </div>
-</div>
+    </section>
 
-    <div>
-      <div class="contact">
-  </div>
-  <section id="contact">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-8 mx-auto text-center">
-
-        <br/>
-
-        <h2 class="section-heading">Let's Get In Touch!</h2>
-        <hr class="my-4">
-        <p class="mb-5">If you have any questions!</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-4 ml-auto text-center">
-        <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
-        <p>0117-456-678</p>
-      </div>
-      <div class="col-lg-4 mr-auto text-center">
-        <i class="fa fa-envelope fa-3x mb-3 sr-contact"></i>
-        <p>
-          <a href="mailto:abc@yahoo.com" target="_blank">abc@yahoo.com</a>
-        </p>
-      </div>
-      <div class="col-lg-4 mr-auto text-center">
-        <i class="fa fa-comment fa-3x mb-3 sr-contact"></i>
-        <p>
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLScOfc4UjCCOS1I3S-Mz0izxDqXD-hMnaRJhHUOirgpy0yQb5g/viewform?embedded=true%22" target="_blank">Feedback!</a>
-        </p>
-      </div>
-    </div>
-    <br>
-
-    </div>
-    <!-- Contact Us -->
+      <!-- Social Media -->
     <div class="contact">
-
       <a href="http://www.facebook.com" target="_blank"> <img src="images/facebook-logo.png" class="social-logo"></a>
       <a href="http://www.instagram.com" target="_blank"> <img src="images/instagram-logo.jpg" class="social-logo"></a>
       <a href="http://www.twitter.com" target="_blank"> <img src="images/twitter-logo.png" class="social-logo"></a>
