Includes restaurant descriptions
Added all the other restaurant images and descriptions.

--- a/index.html
+++ b/index.html
@@ -92,60 +92,60 @@
       <!-- Restaurant 2 -->
       <div class="row" id="restaurant2">
         <div class="col-7" id="restaurant-description">
-          <h2><b>Name of restaurant 2</b></h2>
-          <p>description</p>
-          <a href="wwww.restaurant2.com">link text</a>
+          <h2><b>Burger Theory</b></h2>
+          <p>Burger Theory was developed following hundreds of recipe experiments. Now, the creativity keeps the passion alive! </p>
+          <a href="https://burgertheory.co.uk/">Join the burger explorers!</a>
         </div>
         <div class="col-5" id="restaurant-image">
-          <img src="images/550x300 Placeholder.png" class="img-fluid">
+          <img src="images/burger_theory_banner.jpg" class="img-fluid">
         </div>
       </div>
 
       <!-- Restaurant 3 -->
       <div class="row" id="restaurant3">
         <div class="col-5" id="restaurant-image">
-          <img src="images/550x300 Placeholder.png" class="img-fluid">
+          <img src="images/biblos-banner.jpg" class="img-fluid">
         </div>
         <div class="col-7" id="restaurant-description">
-          <h2><b>Name of restaurant 3</b></h2>
-          <p>description</p>
-          <a href="wwww.restaurant3.com">link text</a>
+          <h2><b>Biblos</b></h2>
+          <p>The Biblos offers a fusion of Middle Eastern and Caribbean homemade cuisine. The cafe also serves wraps in three sizes: regular, large and the challenge!</p>
+          <a href="https://biblos.co.uk/">Are you up for the challenge?</a>
         </div>
       </div>
 
       <!-- Restaurant 4 -->
       <div class="row" id="restaurant4">
         <div class="col-7" id="restaurant-description">
-          <h2><b>Name of restaurant 4</b></h2>
-          <p>description</p>
-          <a href="wwww.restaurant4.com">link text</a>
+          <h2><b>The Bristolian</b></h2>
+          <p>The Bristolian serves breakfast, lunch and dinner, with options ranging for vegan, veggie and meat choices. The menu has a daily special extension with fresh seasonal ingredients!</p>
+          <a href="http://www.thebristolian.co.uk/">Enjoy a drink and watch the world go by</a>
         </div>
         <div class="col-5" id="restaurant-image">
-          <img src="images/550x300 Placeholder.png" class="img-fluid">
+          <img src="images/the_bristolian_banner.jpg" class="img-fluid">
         </div>
       </div>
 
       <!-- Restaurant 5 -->
       <div class="row" id="restaurant5">
         <div class="col-5" id="restaurant-image">
-          <img src="images/550x300 Placeholder.png" class="img-fluid">
+          <img src="images/steak_of_the_art_banner.jpg" class="img-fluid">
         </div>
         <div class="col-7" id="restaurant-description">
-          <h2><b>Name of restaurant 5</b></h2>
-          <p>description</p>
-          <a href="wwww.restaurant5.com">link text</a>
+          <h2><b>Steak of the Art</b></h2>
+          <p>Steak of the heart combines the passion for art and food for an exciting dining experience! It is original, fun and entertaining.</p>
+          <a href="https://www.steakoftheart.co.uk/">Come and enjoy original art and great food</a>
         </div>
       </div>
 
       <!-- Restaurant 6 -->
       <div class="row" id="restaurant6">
         <div class="col-7" id="restaurant-description">
-          <h2><b>Name of restaurant 6</b></h2>
-          <p>description</p>
-          <a href="wwww.restaurant6.com">link text</a>
+          <h2><b>The Crafty Egg</b></h2>
+          <p>The Crafty Egg gives a new spin on brunch. Surrounded by street art, warm and friendly people; the extensive menu exceedes everyone's expectations!</p>
+          <a href="http://www.thecraftyegg.co.uk/">Engulf yourself in a relaxed, tranquil and casual setting</a>
         </div>
       <div class="col-5" id="restaurant-image">
-        <img src="images/550x300 Placeholder.png" class="img-fluid">
+        <img src="images/the_crafty_egg_banner.jpg" class="img-fluid">
       </div>
 
     <!-- End of restaurant descriptions -->
