--- a/about.html
+++ b/about.html
@@ -5,44 +5,44 @@
     <title>About Us</title>
 
     <!-- Stylesheets -->
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
   </head>
   <body>
 
     <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link" href=".\index.html#home">Home</a>
-      <a class="nav-item nav-link" href=".\index.html#restaurant_menu">Where to eat?</a>
-      <a class="nav-item nav-link" href=".\index.html#contact">Contact Us</a>
-      <a class="nav-item nav-link" href=".\about.html">About Us</a>
+    <nav id="navbar" class="navbar navbar-expand-lg navbar-dark">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link" href=".\index.html#home">Home</a>
+        <a class="nav-item nav-link" href=".\index.html#restaurant_menu">Where to eat?</a>
+        <a class="nav-item nav-link" href=".\about.html">About Us</a>
+        <a class="nav-item nav-link" href=".\index.html#contact">Contact Us</a>
+      </div>
+    </nav>
+
+    <!-- About Us -->
+    <div class="bg_about">
+      <div class="container">
+        <div class="row">
+          <h1 class="about_title">About Us</h1>
+        </div>
+        <div class="row">
+          <div class="col-sm">
+
+          </div>
+          <div class="col-sm">
+
+          </div>
+          <div class="col-sm">
+
+          </div>
+        </div>
+      </div>
     </div>
-  </nav>
-
-
-    <h1>About Us</h1>
-
-    <!.. Added Are you a cat lover -->
-
-    <header class="masthead text-center text-white d-flex">
-   <div class="container my-auto">
-     <div class="row">
-       <div class="col-lg-10 mx-auto">
-         <h1 class="text-uppercase">
-           <strong>Are you a cat Lover?</strong>
-         </h1>
-         <hr>
-       </div>
-       <div class="col-lg-8 mx-auto">
-         <p class="text-faded mb-5">They push things off the counter, they sleep a lot, they don't love you, they're probably planning to kill you. Why do you love them so much?</p>
-         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Those little ball of fur!</a>
-       </div>
-     </div>
-   </div>
- </header>
 
 
   </body>
