--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>About Us</title>
+    <title>Bristol Eats</title>
 
     <!-- Stylesheets -->
     <!-- Stylesheets -->
@@ -31,17 +31,8 @@
           <h1 class="about_title">About Us</h1>
         </div>
         <div class="row">
-          <p></p>
-        </div>
-        <div class="row">
-          <div class="col-sm">
-
-          </div>
-          <div class="col-sm">
-
-          </div>
-          <div class="col-sm">
-
+          <div class="col-8">
+            <h2 class="bio">We're a team of five and passionate about our food! As part of the Code First: Girls' Beginners Course we had to create a website - and we decided to share our favourite Bristol restaurants with you.</h2>
           </div>
         </div>
       </div>
